# stereos

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  LICENSE.md  README.md  bunfig.toml  drizzle.config.ts  openapi.yaml  package.json  tsconfig.json  wrangler.toml
api/: package-lock.json  package.json  tsconfig.json  wrangler.toml
api/migrations/: 0001_initial.sql  0002_simplify_api_keys.sql  0003_add_stripe_customer_id.sql
api/src/: index.ts
apps/api/: package.json  tsconfig.json
apps/web/: index.html  netlify.toml  package.json  vite.config.ts
crates/stereos-core/: Cargo.toml
crates/stereos-core/src/: clean.rs  gltf.rs  lib.rs  ply.rs  token.rs
crates/stereos-wasm/: Cargo.toml
crates/stereos-wasm/src/: lib.rs
docs/: AI_GATEWAY.md  EXTENSION.md  OTEL_REFACTOR.md  TELEMETRY_DOCS_PLAN.md  cloudflare-ai-gateway-implementation.md
docs/plans/: 2025-02-13-openrouter-keys-split-design.md  2026-02-16-cloudflare-ai-gateway.md  2026-02-27-ai-gateway-tab-layout-design.md  2026-02-27-ai-gateway-tab-layout.md
drizzle/: 0002_perpetual_black_knight.sql  0003_known_anita_blake.sql  0004_remove_customer_members.sql  0005_add_telemetry_metrics.sql  001_create_partner_revenue_view.sql  002_add_rbac_and_user_tracking.sql
drizzle/meta/: 0002_snapshot.json  0003_snapshot.json  _journal.json
drizzle/migrations/: 003_add_titles_onboarding_payment.sql  004_create_events_by_title_view.sql  005_add_better_auth_account_id.sql  006_add_better_auth_provider_id.sql  007_add_better_auth_account_password.sql  008_add_better_auth_account_timestamps.sql  009_account_credential_defaults.sql  010_account_provider_account_id_trigger.sql  011_drop_account_provider_id.sql  012_drop_provider_account_id_use_account_id.sql  013_sessions_created_at_updated_at.sql  014_sessions_ip_address_user_agent.sql  015_user_favorite_tool_monthly.sql  016_user_favorite_tool_by_actor.sql  017_invites.sql  018_customer_members.sql  019_artifact_link_diff_content.sql  (+17 more)
scripts/: generate-otelp-sample.ts  run-migrate-015.ts  run-migrate-016.ts  run-migrate-017.ts  run-migrate-018.ts  run-migrate-019.ts  run-migrate-020.ts  run-migrate-027-030.ts  run-migrate-029-030.ts  run-migrate-031.ts  run-migrate-032.ts
(+95 files in other folders)
