[package]
name = "stereos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Gaussian splat to glTF conversion"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["meshopt"]
meshopt = ["dep:meshopt-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }

# glTF JSON schema
gltf-json = { version = "1.4", features = ["extras", "names", "extensions"] }

# Base64 encoding
base64 = "0.22"

# Meshopt compression (pure Rust implementation, optional)
meshopt-rs = { version = "0.1", optional = true }

# JWT validation (native only - uses ring which doesn't support WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken = { version = "9.3", default-features = false, features = ["use_pem"] }

# JWT validation (WASM - pure Rust)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["pem", "alloc"] }
js-sys = "0.3"

[dev-dependencies]
