[package]
name = "stereos-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Stereos"

[lib]
crate-type = ["cdylib"]

[dependencies]
stereos-core = { path = "../stereos-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
